--- a/Concurrent API Calls/Concurrent API Calls/Features/MainViewScreen/View/Base.lproj/MainScreen.storyboard
+++ b/Concurrent API Calls/Concurrent API Calls/Features/MainViewScreen/View/Base.lproj/MainScreen.storyboard
@@ -37,6 +37,7 @@
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhc-NT-qPl">
                                                 <rect key="frame" x="0.0" y="0.0" width="270" height="270"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <accessibility key="accessibilityConfiguration" identifier="everyTenTextView"/>
                                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                 <color key="textColor" systemColor="labelColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -74,6 +75,7 @@
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nBZ-i1-AQq">
                                                 <rect key="frame" x="0.0" y="0.0" width="270" height="270"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <accessibility key="accessibilityConfiguration" identifier="wordCountTextView"/>
                                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                 <color key="textColor" systemColor="labelColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -96,6 +98,7 @@
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kw4-F2-Te5">
                                         <rect key="frame" x="160.33333333333334" y="363.66666666666669" width="72.333333333333343" height="32"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="runRequestsButton"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Button">
                                             <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="15"/>
@@ -134,6 +137,7 @@
                     </view>
                     <connections>
                         <outlet property="everyTenTextView" destination="zhc-NT-qPl" id="WQ1-0j-tkU"/>
+                        <outlet property="runRequestsButton" destination="kw4-F2-Te5" id="TUN-oK-rrM"/>
                         <outlet property="wordCountTextView" destination="nBZ-i1-AQq" id="pVh-iP-B3u"/>
                     </connections>
                 </viewController>
